--- a/style.css
+++ b/style.css
@@ -74,7 +74,9 @@ body {
         flex-direction: column;
         align-items: flex-start;
         width: fit-content;
-        padding: 4%;
+        height: 22vw;
+        padding: 4% 2% 4% 4%;
+        justify-content: space-between;
     }
 
     .container {
@@ -91,15 +93,17 @@ body {
 
     .firstText {
         text-align: left;
-        width: 380px;
+        width: 100%;
         font-size: 36px;
-        margin: 0px 0 20px;
+        margin: 0 0 3%;
+        max-width: 500px;
     }
 
     .secondText {
         text-align: left;
-        width: 374px;
-        margin: 0px 0 20px;
+        width: 100%;
+        margin: 0 0 3%;
+        max-width: 540px;
     }
 
     .counter {
@@ -117,8 +121,9 @@ body {
         display: flex;
         flex-direction: row;
         align-items: center;
-        width: 380px;
+        width: 100%;
         margin: 0;
+        max-width: 570px;
     }
 
 }
