--- a/style.css
+++ b/style.css
@@ -4,11 +4,15 @@
 }
 
 body {
+    display: flex;
     font-family: 'Inter', sans-serif;
     margin: 0;
     padding: 0;
     background: var(--bg);
     color: white;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .container {
